--- a/fakultas-ekonomi-dan-bisnis.html
+++ b/fakultas-ekonomi-dan-bisnis.html
@@ -8,14 +8,14 @@
 	
 		<link href="./_app/immutable/assets/0.DArMKqzx.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.6SIb-eGx.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B_oOwcf_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_Uh4DdsG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.MNZiKuJn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DUVLlrqr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B1iluEif.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BWOpdrFl.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B5ZecXW7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BdJBO-Ti.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bol9LUmm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DqLnS_vj.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DfdpHArr.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bvud9GLK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/11qMpu-4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/P7Yj9IKM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/5t63bPOh.js">
@@ -27,7 +27,7 @@
 			
 			<script>
 				{
-					__sveltekit_64me9p = {
+					__sveltekit_qj64uz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/docs-tel-u"
 					};
@@ -35,8 +35,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B_oOwcf_.js"),
-						import("./_app/immutable/entry/app.B5ZecXW7.js")
+						import("./_app/immutable/entry/start.MNZiKuJn.js"),
+						import("./_app/immutable/entry/app.BdJBO-Ti.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
