--- a/logo-universitas.html
+++ b/logo-universitas.html
@@ -6,20 +6,20 @@
 	<link rel="icon" href="./favicon.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.fjjitaos.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.FqFw3unt.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.6SIb-eGx.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BajTIx6Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DqadyDnk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BUWyEHw7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/y68YHbYI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B1iluEif.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BWOpdrFl.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CfuBpTr4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CTBhNGeW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bol9LUmm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DqLnS_vj.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DVRzeK36.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.JMhK25jB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/11qMpu-4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/P7Yj9IKM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/5t63bPOh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.CTlCCRln.js"><!--[--><meta property="og:site_name" content="Telkom University Brand Guidelines"> <meta property="og:type" content="website"> <meta property="og:description" content="Simpledocs"><!--]--><!--[--><meta property="og:title" content="Logo Universitas | Telkom University Brand Guidelines"><!--]--><title>Logo Universitas | Telkom University Brand Guidelines</title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/CioNE7tU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B4EHLolH.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.kIO7hGbU.js"><!--[--><meta property="og:site_name" content="Telkom University Brand Guidelines"> <meta property="og:type" content="website"> <meta property="og:description" content="Simpledocs"><!--]--><!--[--><meta property="og:title" content="Logo Universitas | Telkom University Brand Guidelines"><!--]--><title>Logo Universitas | Telkom University Brand Guidelines</title>
 </head>
 
 <body class="flex flex-col w-full min-h-screen" data-sveltekit-preload-data="hover">
@@ -27,7 +27,7 @@
 			
 			<script>
 				{
-					__sveltekit_h2e2xn = {
+					__sveltekit_1tff9uf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/docs-tel-u"
 					};
@@ -35,12 +35,12 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BajTIx6Q.js"),
-						import("./_app/immutable/entry/app.CfuBpTr4.js")
+						import("./_app/immutable/entry/start.BUWyEHw7.js"),
+						import("./_app/immutable/entry/app.CTBhNGeW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
-							data: [null,{"type":"data","data":{title:"Logo Universitas",slug:"logo-universitas",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi."],previousPage:{title:"Buku Pedoman",slug:"buku-pedoman",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi.",{type:"pdf",target:"/docs/pedoman-dan-panduan-identitas"}]},nextPage:{title:"Warna",slug:"warna",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi."]}},"uses":{"params":["slug"]}}],
+							data: [null,{"type":"data","data":{title:"Logo Universitas",slug:"logo-universitas",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi."],previousPage:{title:"Buku Pedoman",slug:"buku-pedoman",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi.",{type:"pdf",target:"/docs/pedoman-dan-panduan-identitas"}]},nextPage:{title:"Warna",slug:"warna",contents:[{type:"color-blocks",items:[{label:"Merah Primer",blockColor:"rgb(237, 28, 36)",textColor:"#ffffff"},{label:"Merah Sekunder",blockColor:"rgb(176, 17, 22)",textColor:"#ffffff"},{label:"Hitam",blockColor:"rgb(0, 0, 0)",textColor:"#ffffff"},{label:"Abu Primer",blockColor:"rgb(88, 89, 91)",textColor:"#ffffff"},{label:"Abu Sekunder",blockColor:"rgb(128, 130, 133)",textColor:"#000000"},{label:"Abu Tersier",blockColor:"rgb(167, 169, 172)",textColor:"#000000"}]},"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi."]}},"uses":{"params":["slug"]}}],
 							form: null,
 							error: null
 						});
