--- a/buku-pedoman.html
+++ b/buku-pedoman.html
@@ -8,18 +8,18 @@
 	
 		<link href="./_app/immutable/assets/0.FqFw3unt.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.6SIb-eGx.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BUWyEHw7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/y68YHbYI.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DWzR6pkc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cy2JkIlL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B1iluEif.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BWOpdrFl.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CTBhNGeW.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.8Jh0KRnx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bol9LUmm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DqLnS_vj.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.JMhK25jB.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DGOQgejb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/11qMpu-4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CioNE7tU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B4EHLolH.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.kIO7hGbU.js"><!--[--><meta property="og:site_name" content="Telkom University Brand Guidelines"> <meta property="og:type" content="website"> <meta property="og:description" content="Simpledocs"><!--]--><!--[--><meta property="og:title" content="Buku Pedoman | Telkom University Brand Guidelines"><!--]--><title>Buku Pedoman | Telkom University Brand Guidelines</title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/D7DWkAx0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BrogrN2b.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.wZAvGFIx.js"><!--[--><meta property="og:site_name" content="Telkom University Brand Guidelines"> <meta property="og:type" content="website"> <meta property="og:description" content="Simpledocs"><!--]--><!--[--><meta property="og:title" content="Buku Pedoman | Telkom University Brand Guidelines"><!--]--><title>Buku Pedoman | Telkom University Brand Guidelines</title>
 </head>
 
 <body class="flex flex-col w-full min-h-screen" data-sveltekit-preload-data="hover">
@@ -27,7 +27,7 @@
 			
 			<script>
 				{
-					__sveltekit_1tff9uf = {
+					__sveltekit_ngokxg = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/docs-tel-u"
 					};
@@ -35,12 +35,12 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BUWyEHw7.js"),
-						import("./_app/immutable/entry/app.CTBhNGeW.js")
+						import("./_app/immutable/entry/start.DWzR6pkc.js"),
+						import("./_app/immutable/entry/app.8Jh0KRnx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
-							data: [null,{"type":"data","data":{title:"Buku Pedoman",slug:"buku-pedoman",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi.",{type:"pdf",target:"/docs/pedoman-dan-panduan-identitas"}],previousPage:{title:"Kepemilikan dan Lisensi",slug:"kepemilikan-dan-lisensi",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi."]},nextPage:{title:"Logo Universitas",slug:"logo-universitas",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi."]}},"uses":{"params":["slug"]}}],
+							data: [null,{"type":"data","data":{title:"Buku Pedoman",slug:"buku-pedoman",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi.",{type:"pdf",target:"/docs/pedoman-dan-panduan-identitas"}],previousPage:{title:"Kepemilikan dan Lisensi",slug:"kepemilikan-dan-lisensi",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi."]},nextPage:{title:"Logo Universitas",slug:"logo-universitas",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi.",{type:"section-title",value:"Konfigurasi Utama"},{type:"image",title:"Logo primer utama Tel-U",target:"/docs/logo/tel-u/primer-utama.png",background:"#ffffff",width:"600px"},{type:"image",title:"Logo primer vertikal Tel-U",target:"/docs/logo/tel-u/primer-vertikal.png",background:"#ffffff",width:"300px"},{type:"image",title:"Logo primer horizontal 1 Tel-U",target:"/docs/logo/tel-u/primer-horizontal-1.png",background:"#ffffff",width:"600px"},{type:"image",title:"Logo primer horizontal 2 Tel-U",target:"/docs/logo/tel-u/primer-horizontal-2.png",background:"#ffffff",width:"450px"},{type:"section-title",value:"Konfigurasi Formal dan Legal"},{type:"section-title",value:"Konfigurasi Latar Abu-Abu"},{type:"section-title",value:"Konfigurasi Latar Hitam"},{type:"section-title",value:"Konfigurasi Sekunder"}]}},"uses":{"params":["slug"]}}],
 							form: null,
 							error: null
 						});
