--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 	<link rel="icon" href="./favicon.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.FqFw3unt.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DWzR6pkc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cy2JkIlL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B1iluEif.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BWOpdrFl.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8Jh0KRnx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bol9LUmm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DqLnS_vj.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DGOQgejb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/11qMpu-4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D7DWkAx0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BrogrN2b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CTFaOlZv.js"><!--[--><meta property="og:site_name" content="Telkom University Brand Guidelines"> <meta property="og:type" content="website"> <meta property="og:description" content="Simpledocs"><!--]--><!--[--><meta property="og:title" content="Telkom University Brand Guidelines"><!--]--><title>Telkom University Brand Guidelines</title>
+		<link href="./_app/immutable/assets/0.MKqvSkfP.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CvbFas7Y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/mVqklfR_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BYOHr42B.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DqNccpaZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DMGOnwYX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CkPMGfKk.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CGfZTlsK.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DW9qC7cX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ClzKPE17.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CtCAFIU_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Czmk2fT1.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.C8-QUm1P.js"><!--[--><meta property="og:site_name" content="Telkom University Brand Guidelines"> <meta property="og:type" content="website"> <meta property="og:description" content="Simpledocs"><!--]--><!--[--><meta property="og:title" content="Telkom University Brand Guidelines"><!--]--><title>Telkom University Brand Guidelines</title>
 </head>
 
 <body class="flex flex-col w-full min-h-screen" data-sveltekit-preload-data="hover">
@@ -33,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_ngokxg = {
+					__sveltekit_1yicswp = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/docs-tel-u"
 					};
@@ -41,8 +41,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DWzR6pkc.js"),
-						import("./_app/immutable/entry/app.8Jh0KRnx.js")
+						import("./_app/immutable/entry/start.CvbFas7Y.js"),
+						import("./_app/immutable/entry/app.DMGOnwYX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
