--- a/warna.html
+++ b/warna.html
@@ -6,20 +6,20 @@
 	<link rel="icon" href="./favicon.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.FqFw3unt.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.MKqvSkfP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.6SIb-eGx.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DWzR6pkc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cy2JkIlL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B1iluEif.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BWOpdrFl.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8Jh0KRnx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bol9LUmm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DqLnS_vj.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DGOQgejb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/11qMpu-4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D7DWkAx0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BrogrN2b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.wZAvGFIx.js"><!--[--><meta property="og:site_name" content="Telkom University Brand Guidelines"> <meta property="og:type" content="website"> <meta property="og:description" content="Simpledocs"><!--]--><!--[--><meta property="og:title" content="Warna | Telkom University Brand Guidelines"><!--]--><title>Warna | Telkom University Brand Guidelines</title>
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CvbFas7Y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/mVqklfR_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BYOHr42B.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DqNccpaZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DMGOnwYX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CkPMGfKk.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CGfZTlsK.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DW9qC7cX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ClzKPE17.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CtCAFIU_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Czmk2fT1.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.DmtQm7CE.js"><!--[--><meta property="og:site_name" content="Telkom University Brand Guidelines"> <meta property="og:type" content="website"> <meta property="og:description" content="Simpledocs"><!--]--><!--[--><meta property="og:title" content="Warna | Telkom University Brand Guidelines"><!--]--><title>Warna | Telkom University Brand Guidelines</title>
 </head>
 
 <body class="flex flex-col w-full min-h-screen" data-sveltekit-preload-data="hover">
@@ -27,7 +27,7 @@
 			
 			<script>
 				{
-					__sveltekit_ngokxg = {
+					__sveltekit_1yicswp = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/docs-tel-u"
 					};
@@ -35,12 +35,12 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DWzR6pkc.js"),
-						import("./_app/immutable/entry/app.8Jh0KRnx.js")
+						import("./_app/immutable/entry/start.CvbFas7Y.js"),
+						import("./_app/immutable/entry/app.DMGOnwYX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
-							data: [null,{"type":"data","data":{title:"Warna",slug:"warna",contents:[{type:"color-blocks",items:[{label:"Merah Primer",blockColor:"rgb(237, 28, 36)",textColor:"#ffffff"},{label:"Merah Sekunder",blockColor:"rgb(176, 17, 22)",textColor:"#ffffff"},{label:"Abu Primer",blockColor:"rgb(88, 89, 91)",textColor:"#ffffff"},{label:"Abu Sekunder",blockColor:"rgb(128, 130, 133)",textColor:"#ffffff"},{label:"Abu Tersier",blockColor:"rgb(167, 169, 172)",textColor:"#000000"}]},"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi."],previousPage:{title:"Logo Universitas",slug:"logo-universitas",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi.",{type:"section-title",value:"Konfigurasi Utama"},{type:"image",title:"Logo primer utama Tel-U",target:"/docs/logo/tel-u/primer-utama.png",background:"#ffffff",width:"600px"},{type:"image",title:"Logo primer vertikal Tel-U",target:"/docs/logo/tel-u/primer-vertikal.png",background:"#ffffff",width:"300px"},{type:"image",title:"Logo primer horizontal 1 Tel-U",target:"/docs/logo/tel-u/primer-horizontal-1.png",background:"#ffffff",width:"600px"},{type:"image",title:"Logo primer horizontal 2 Tel-U",target:"/docs/logo/tel-u/primer-horizontal-2.png",background:"#ffffff",width:"450px"},{type:"section-title",value:"Konfigurasi Formal dan Legal"},{type:"section-title",value:"Konfigurasi Latar Abu-Abu"},{type:"section-title",value:"Konfigurasi Latar Hitam"},{type:"section-title",value:"Konfigurasi Sekunder"}]},nextPage:{title:"Typeface",slug:"typeface",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi.",{type:"section-title",value:"Calibri"},{type:"image",title:"Typeface Calibri",target:"/docs/calibri.svg",background:"#ffffff"},{type:"hyperlink",label:"Detail terkait typeface Calibri",target:"https://learn.microsoft.com/en-us/typography/font-list/calibri"}]}},"uses":{"params":["slug"]}}],
+							data: [null,{type:"data",data:{title:"Warna",slug:"warna",contents:[{type:"color-blocks",items:[{label:"Merah Primer",blockColor:"rgb(237, 28, 36)",textColor:"#ffffff"},{label:"Merah Sekunder",blockColor:"rgb(176, 17, 22)",textColor:"#ffffff"},{label:"Abu Primer",blockColor:"rgb(88, 89, 91)",textColor:"#ffffff"},{label:"Abu Sekunder",blockColor:"rgb(128, 130, 133)",textColor:"#ffffff"},{label:"Abu Tersier",blockColor:"rgb(167, 169, 172)",textColor:"#000000"}]},"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi."],previousPage:{title:"Logo Universitas",slug:"logo-universitas",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi.",{type:"section-title",value:"Konfigurasi Utama"},{type:"image",title:"Logo primer utama Tel-U",target:"/docs/logo/tel-u/primer-utama.png",background:"#ffffff",width:"600px"},{type:"image",title:"Logo primer vertikal Tel-U",target:"/docs/logo/tel-u/primer-vertikal.png",background:"#ffffff",width:"300px"},{type:"image",title:"Logo primer horizontal 1 Tel-U",target:"/docs/logo/tel-u/primer-horizontal-1.png",background:"#ffffff",width:"600px"},{type:"image",title:"Logo primer horizontal 2 Tel-U",target:"/docs/logo/tel-u/primer-horizontal-2.png",background:"#ffffff",width:"450px"},{type:"section-title",value:"Konfigurasi Formal dan Legal"},{type:"section-title",value:"Konfigurasi Latar Abu-Abu"},{type:"section-title",value:"Konfigurasi Latar Hitam"},{type:"section-title",value:"Konfigurasi Sekunder"}]},nextPage:{title:"Typeface",slug:"typeface",contents:["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sodales augue lorem, ut facilisis lorem finibus ut. Nunc mattis dui at pharetra condimentum. Phasellus venenatis id augue quis laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sit amet quam at tellus tristique hendrerit vitae et augue. Praesent eget dui ornare, accumsan augue sed, lacinia erat. Maecenas sit amet odio mi.",{type:"section-title",value:"Calibri"},{type:"image",title:"Typeface Calibri",target:"/docs/calibri.svg",background:"#ffffff"},{type:"hyperlink",label:"Detail terkait typeface Calibri",target:"https://learn.microsoft.com/en-us/typography/font-list/calibri"}]}},uses:{params:["slug"]}}],
 							form: null,
 							error: null
 						});
