--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="./favicon.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link href="./_app/immutable/entry/start.D6BiYI4W.js" rel="modulepreload">
-		<link href="./_app/immutable/chunks/DD0u_bnT.js" rel="modulepreload">
+	<link href="./_app/immutable/entry/start.BcjA7olJ.js" rel="modulepreload">
+		<link href="./_app/immutable/chunks/CJSxfzJ8.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/CY0zLpua.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/leef0F0n.js" rel="modulepreload">
-		<link href="./_app/immutable/entry/app.Satenr2X.js" rel="modulepreload">
+		<link href="./_app/immutable/entry/app.DfjC96rx.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/vcfxwmUZ.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/CwuhY6Fp.js" rel="modulepreload">
-		<link href="./_app/immutable/nodes/0.CBJzWJe1.js" rel="modulepreload">
+		<link href="./_app/immutable/nodes/0.DrfiEDRq.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/i4vs1WVr.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/CLCQPj9V.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/Duk-V3Mu.js" rel="modulepreload">
@@ -33,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_elshsr = {
+					__sveltekit_1gjnl7e = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/docs-tel-u"
 					};
@@ -41,8 +41,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D6BiYI4W.js"),
-						import("./_app/immutable/entry/app.Satenr2X.js")
+						import("./_app/immutable/entry/start.BcjA7olJ.js"),
+						import("./_app/immutable/entry/app.DfjC96rx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
